<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="42dp"
                android:layout_height="50dp"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:text="@string/textview1"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview2" />

            <EditText
                android:id="@+id/code"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:stretchColumns="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview3" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:stretchColumns="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview4" />

            <EditText
                android:id="@+id/price"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:stretchColumns="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addProductButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:text="@string/button1" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="271dp"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:text="@string/button2" />
        </TableRow>

        <TableRow
            android:layout_width="389dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/showProductsButton"
                android:layout_width="426dp"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:stretchColumns="1"
                android:text="@string/button3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:gravity="center_horizontal" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>